Apply convention plugins